Styles fixes: enroll modal, align enroll buttons to bottom.

--- a/apps/coopolis/static/styles/scss/courses.scss
+++ b/apps/coopolis/static/styles/scss/courses.scss
@@ -73,3 +73,7 @@
         }
     }
 }
+
+.course-data p:last-of-type {
+    flex-grow: 1;
+}
