--- a/apps/coopolis/static/styles/scss/modal.scss
+++ b/apps/coopolis/static/styles/scss/modal.scss
@@ -45,6 +45,8 @@
 }
 
 .modal-content {
+    flex-direction: column;
+    flex-grow: 1;
     font-size: 1.25rem;
 }
 
