--- a/apps/coopolis/static/styles/stylesheet.css
+++ b/apps/coopolis/static/styles/stylesheet.css
@@ -259,6 +259,10 @@ header .menu a:hover {
   color: initial;
 }
 
+.course-data p:last-of-type {
+  flex-grow: 1;
+}
+
 footer {
   display: flex;
   min-height: 100px;
@@ -337,6 +341,8 @@ footer p span {
 }
 
 .modal-content {
+  flex-direction: column;
+  flex-grow: 1;
   font-size: 1.25rem;
 }
 
